--- a/VRChat/55/1091055.html
+++ b/VRChat/55/1091055.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "aH6tjIhUS+DSf6o4kj6VWujmluKbWUrTyRBm5hDlVfQ="></script>
+    "gXssftSQzXqnjHpJq0URJgzvrLmmQX/yu9Qa6d9VheY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Raymarching Cube Shader (Unity/VRChat)","description":"Unity2019まで動作確認してあります。Unityのバージョン更新によって動かなくなった場合にサポートはしかねます。対応した場合は告知します。\n\nレイマーチングを使用してキューブを描画するシェーダー(Unity)です。\n12ポリゴンのキューブに適用して、高いポリゴン数のような表現が可能です。描画ピクセル数が小さいほど負荷は下がります。\n\nダイナミックボーン等と組み合わせれば、アクセサリーとしても使用可能です。（2枚めの画像は、ヨコシマ工房さまの｢VRChat向け　『ひし形カットピアス』」(https://booth.pm/ja/items/1028058)の先端に組み合わせたものです。）\n\nVRChatで使用可能です。\n詳しくは付属のREADMEをお読みください（プロパティの説明もあります）\nなにかあればTwitter: wraikny まで\n------\n2018/11/17/1:58更新(v1.1)：影の処理を追加。\n2019/1/19/7:03更新(v2.0)：色のグラデーション機能の追加と、インスペクタ拡張で見やすくしました。\n2019/1/19/8:16更新(v2.2)：グラデーションや単色時の明度の変化する方向を指定可能に。\n2019/1/19/18:49更新(v2.2.1)：軽微な不具合修正。\n2020/7/21 更新(v2.3.2): 背景色を指定可能に。キーワード削減。\n2020/11/22 v2.3.3: 軽微な修正\n2021/6/30 v2.3.4: 何らかの修正\n2021/6/30 v2.3.5: ダイナミックバッチングが行われると表示がおかしくなる不具合を修正","url":"https://booth.pm/ja/items/1091055","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1091055/f3fad745-cfb0-4ecb-9d40-73822e54003c_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aH6tjIhUS+DSf6o4kj6VWujmluKbWUrTyRBm5hDlVfQ="></script>
+    nonce="gXssftSQzXqnjHpJq0URJgzvrLmmQX/yu9Qa6d9VheY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -180,7 +180,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1091055/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               134
@@ -195,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1091055/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               134
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
