--- a/VRChat/17/1090517.html
+++ b/VRChat/17/1090517.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9NbnhWH99ATtNhhy1d8kykO5HaKudu85Z4sYwDx+IxY="></script>
+    "qIzu25883xwq9pSgLws1vi+7wgsrVYIgz3Fo0pm9nVI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Re:Military Bot type-1","description":"2022 5/17 更にリメイクしました。\n2020 7/28　リメイク版に差し替えて再公開\n2018 12/03 VRM対応しました！\n\nVRchat向けに作成した人間サイズの軍用ロボです。\nアバターとしての利用からワールドオブジェクト、ジャンクとしてまでご自由にお使いください。\n\n\n-----------------------------------------\n利用規約\n\n当規約は随時更新させていただきますので、最新の規約の確認をお願いします。\n\n許可事項\n・VRchatでの使用\n・Unity、MMDでの使用\n・ゲーム、動画、静止画での使用\n・アバターペデスタルを介しての再配布\n・R-18、R-18Gでの使用\n・当モデルの改変\n・商用利用\n\n禁止事項\n・政治的、差別的、誹謗中のための利用\n・ゲーム、映像作品、アバターペデスタルを通さない二次配布\n・当モデルを用いてIspVitaminの名を騙ること\n\n不明な点や不具合報告などございましたら、Twitter(@IspVitamin)までご連絡お願いします。\n\n初版作成_2018月7/14\n\n","url":"https://booth.pm/ja/items/1090517","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1090517/ea66646a-1f15-40c4-83ec-9c2cda5b2857_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9NbnhWH99ATtNhhy1d8kykO5HaKudu85Z4sYwDx+IxY="></script>
+    nonce="qIzu25883xwq9pSgLws1vi+7wgsrVYIgz3Fo0pm9nVI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1090517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1090517/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
