--- a/VRChat/55/1090455.html
+++ b/VRChat/55/1090455.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+m1lUzeM8p8OFpn9smYPOOxBARIid0/bvIFy6evZC78="></script>
+    "VDIsP/MH0ZClfHHGGWWO/KLWvm5F6bXJEItSNF7RmYc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】打刀（合計△1086ポリゴン）","description":"打刀、オリジナル3Dモデルです。\nVRChatなどでの使用を想定して制作しました。\n全体で△1086ポリゴンなので扱いやすいと思います。\n\nメッシュは5個に分かれています。\n・刀身△110ポリゴン\n・鍔△428ポリゴン\n・柄△40ポリゴン\n・鞘△236ポリゴン\n・下緒△272ポリゴン\n\n設定次第で鞘を腰に残したまま抜刀することもできます。\n\nVRChatでこの3Dモデルを使うときにできる、抜刀時の設定の一例を書いておきます。\n１．腰に刀と鞘を装備します。\n２．手に刀のみを持ち、非表示にしておきます。\n３．アニメーションで腰の刀部分を非表示にします。\n４．同時に手に持った刀を表示させます。\n５．そのまま好きなように動きます。\n\n利き手と反対の手で鞘を持っても良さそうです。\n\n※アニメーションファイルや詳細な設定方法は、今回のファイルに含まれません。\n※コントローラーや部屋の物を壊さないようご注意ください。\n\n---------------------------------------------------------------\nファイルの中身\n・KATANA.unitypackage\n・Uchigatana.fbx\n・texture（Albedo、Metallic、Normal）各1枚\n\ntextureファイルは解像度1024で制作しました。\n各1枚にまとめてあります。\nマテリアルは5個、別々に設定しました。\n個別に色の変更や質感調整もできます。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\nwakamaru shop","url":"https://booth.pm/ja/items/1090455","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1090455/a26d8b78-dc8a-4f9b-94fd-d293c89f3973_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+m1lUzeM8p8OFpn9smYPOOxBARIid0/bvIFy6evZC78="></script>
+    nonce="VDIsP/MH0ZClfHHGGWWO/KLWvm5F6bXJEItSNF7RmYc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,7 +187,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1090455/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1090455/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
