--- a/VRChat/13/1089413.html
+++ b/VRChat/13/1089413.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rZD+rJoSkAkvu/X4jJJ2pxV7e/z1JMjlY3+7tiyHKvM="></script>
+    "cqKuo4WA+ZxHsM1evd0K537M3Ekdktyl2ldPKn3saJg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"脳内設定上撃てるタイプのガンブレード","description":"VRchat等で使用できるボクセル(MagicaVoxel)製ガンブレードです。\nポリゴン数15180です、実質アニメーションオーバーライド専用。\n使っているのを作者に見せると跳ね回ります。\n\nUnity上にインポートした後、画像三枚目のようにD\u0026Dして下さい。\n\nUnitypackageとvoxファイルを同梱していますが、voxファイルの方は分かる人向けです。(Blender上でサイズ変更をした上で結合しているため)\n\n2018/11/15 - 不備のあった箇所の修正、及び追記をしました。","url":"https://booth.pm/ja/items/1089413","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a9b2887-501c-43fe-ad46-c67ddd6f6125/i/1089413/b4caf2fd-53fd-45ba-a73f-355aa0a391f7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rZD+rJoSkAkvu/X4jJJ2pxV7e/z1JMjlY3+7tiyHKvM="></script>
+    nonce="cqKuo4WA+ZxHsM1evd0K537M3Ekdktyl2ldPKn3saJg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089413/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089413/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
