--- a/VRChat/81/1089381.html
+++ b/VRChat/81/1089381.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qR1fvMfegrwwH3u01JxqPdD2HTJKD1IjhZH8e4ZEqLo="></script>
+    "YcF5De0WuFCZJkN0OkAT8DLIMlD+6bNDmo0Var3TyS8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【配布終了】ビッ〇ガン","description":"Unity用テクスチャ出力してます。\n14821面\n8556頂点\n\n\n●可：\n改変\nVRChat\nMMD全般\n個人利用\n\n●不可：\n商業利用\n再配布\n自作発言\n\n\n※版権はこちらのものではないのでお気を付けください。\n\n\n\n質問は下のリンクでお願いします。\n\nTwitter:\ntwitter.com/_hazear\n\nEmail:\nzuiun@outlook.com\n(English,Japanese,Chinese)","url":"https://booth.pm/ja/items/1089381","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dc5fa78f-d72c-45fe-9856-ff0a40ae2b08/i/1089381/472bf9a3-d186-4a79-8be7-ed140c51add0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qR1fvMfegrwwH3u01JxqPdD2HTJKD1IjhZH8e4ZEqLo="></script>
+    nonce="YcF5De0WuFCZJkN0OkAT8DLIMlD+6bNDmo0Var3TyS8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089381/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089381/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
