--- a/VRChat/16/1089016.html
+++ b/VRChat/16/1089016.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0PMQYKzMuE8sDOvsmxx7Kz83FYGnjno93FXJU1n9Q2c="></script>
+    "5UxpvVpLg4AvvNqG9C1qS0cU6aqh5cTZbFrxy8vMkBo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NX417A2 20\"","description":"フルスクラッチのHK417A2の20インチバレルの3Dモデルです(知的財産権の関係から名称やテクスチャをNX417A2としてあります)。\n\n各種付属品付の方は銃本体の他にスコープ、バイポッド、サプレッサーが付属します。\n\nUnitypackageを同梱しているので、手軽にUnityにインポートしてご使用いただけます。\n\nポリゴン数: 46470三角面(全オブジェクトの総和)\nテクスチャ解像度: 4096x4096(銃本体)、2048x2048(ほか)","url":"https://booth.pm/ja/items/1089016","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"5300","highPrice":"5800"},"image":"https://booth.pximg.net/c/620x620/39edc5c4-fd37-4865-94df-88cfbc8cbd88/i/1089016/16e008fd-bc73-4211-9b22-841c7d47592d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0PMQYKzMuE8sDOvsmxx7Kz83FYGnjno93FXJU1n9Q2c="></script>
+    nonce="5UxpvVpLg4AvvNqG9C1qS0cU6aqh5cTZbFrxy8vMkBo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,10 +178,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1089016/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              138
+                              139
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1089016/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              138
+                              139
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
